[package]
name = "age_of_sail"
version = "0.1.0"
authors = ["Oliver Norton <onorton125@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
chrono = "0.4.19"
serde = "1.0.123"
amethyst_test = "0.15"
test-case = "1.1.0"
itertools="0.10.0"
priority-queue="1.1.1"
ron="*"

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]
